tests/pass/MinusAssign.java
package pass;

import java.lang.System;

public class MinusAssign {

    public static int minusAssign(int x, int y) {
       
    	x = x - y;
    	return x;
    }

}
