tests/fail/MinusAssign.java
package fail;

import java.lang.System;

public class MinusAssign {
	
	public static void main(String[] args) {
		
		int x = 42 ;
		System.out.println(x -= 'a');
	}
}